Fixed function label wrapping to new line

--- a/src/fields/Fields.css
+++ b/src/fields/Fields.css
@@ -27,6 +27,7 @@
 
 .input-label {
     padding: 0 0.3vw 0 0.3vw;
+    white-space: nowrap;
 }
 
 .field__section {
